# pywebnn

./: Makefile  README.md  pyproject.toml  requirements.txt
pywebnn_rust/: Cargo.toml  pyproject.toml
pywebnn_rust/src/: lib.rs
tests/: __init__.py  test_matmul.py  test_wpt_ops.py  wpt_utils.py
tests/data/: add_tests.json  batchnormalization_tests.json  clamp_tests.json  conv2d_tests.json  gather_tests.json  matmul_tests.json  maxpool2d_tests.json  relu_tests.json  slice_tests.json  softmax_tests.json
webnn/: __init__.py
